파일이름수정및무비폴더추가!메인페이지완성 이벤트x

--- a/webapp/static/css/common.css
+++ b/webapp/static/css/common.css
@@ -1,9 +1,10 @@
 html, body {
 	height:100%;
+	background-color: #FFFFF0;
 }
 
 .main-top-container {
-	height : 200px;
+	height : 160px;
 
 }
 
@@ -22,7 +23,7 @@ html, body {
 
 .top-login ul li {
 	display: inline-block;
-	color: blue;
+	color: #B19CD9;
 	padding: 10px;
 }
 
@@ -54,9 +55,26 @@ html, body {
 
 
 .main-content {
+	position: relative;
+	height:350px;
+	background-image: url("../images/mainimage.jpg");
+	background-position:center;
+	background-repeat: no-repeat;
+	width:100%;
+}
+
+.main-content-main {
+	height:290px;
+}
 
 
-
+.main-content-background {
+	color: black;
+	font-weight:bold;
+	font-size: 35px;
+	text-align:center;
+	height: 200px;
+	bottom:0;
 }
 
 .main-bottom {
