--- a/webapp/static/css/movie.css
+++ b/webapp/static/css/movie.css
@@ -16,6 +16,13 @@
 
 .movie-name li {
 	color:#AEC6CF !important;
-	height:150px;
+	height:200px;
 	display: inline-block;
+	position: relative;
+}
+
+.movie-body {
+	display: inline-block;
+	height:250px;
+	width:170px;
 }
